// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video Cover matches the snapshot 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  padding-bottom: 40px;
  padding-left: 20px;
  padding-right: 20px;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  margin-right: 20px;
}

.c12 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
}

.c13 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 42px;
  line-height: 50px;
}

.c15 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 18px;
  line-height: 26px;
  padding-top: 30px;
}

.c5 {
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 12px;
}

.c7 {
  padding-right: 20px;
  width: 60px;
}

.c14 {
  max-width: 100%;
}

.c9 {
  width: 32px;
  height: 32px;
}

.c10 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  background: url(https://artsy-vanity-files-production.s3.amazonaws.com/images/galerie-ceysson-benetiere_abmb.jpg) no-repeat center center;
  background-size: cover;
  background-color: black;
  position: absolute;
  width: 100%;
  height: 100%;
}

.c2 {
  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.6));
  position: absolute;
  width: 100%;
  height: 100%;
}

.c3 {
  box-sizing: border-box;
  z-index: 1;
  position: absolute;
  width: 100%;
  height: 100%;
}

.c3 .c8 {
  height: 60px;
  width: 44px;
  cursor: pointer;
}

.c0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  color: white;
  opacity: 1;
  visibility: visible;
  -webkit-transition: opacity 0.25s ease,visibility 0.25s ease;
  transition: opacity 0.25s ease,visibility 0.25s ease;
}

@media screen and (min-width:40em) {
  .c4 {
    padding-bottom: 60px;
  }
}

@media screen and (min-width:40em) {
  .c15 {
    font-size: 22px;
  }
}

@media screen and (min-width:52em) {
  .c15 {
    font-size: 22px;
  }
}

@media screen and (min-width:64em) {
  .c15 {
    font-size: 22px;
  }
}

@media screen and (min-width:40em) {
  .c15 {
    line-height: 32px;
  }
}

@media screen and (min-width:52em) {
  .c15 {
    line-height: 32px;
  }
}

@media screen and (min-width:64em) {
  .c15 {
    line-height: 32px;
  }
}

@media screen and (min-width:40em) {
  .c14 {
    max-width: 60%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    src="https://artsy-vanity-files-production.s3.amazonaws.com/images/galerie-ceysson-benetiere_abmb.jpg"
  />
  <div
    className="c2"
  />
  <div
    className="c3 c4"
    width="100%"
  >
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
          onClick={[Function]}
          width="60px"
        >
          <svg
            className="c8 c9"
            version="1.1"
            viewBox="0 0 40 56"
            x="0px"
            xmlns="http://www.w3.org/2000/svg"
            y="0px"
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <polygon
                fill="white"
                points="0 0 0 56 39.3600006 28"
              />
            </g>
          </svg>
        </div>
        <div
          className=""
        >
          <div>
            <div
              className="c6"
            >
              <div
                className="c10 c11"
                fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                fontSize="14px"
              >
                Future of Art
              </div>
              <div
                className="c12"
                fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                fontSize="14px"
              >
                02:28
              </div>
            </div>
            <div
              className="c13"
              fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
              fontSize="42px"
            >
              Trevor Paglan
            </div>
          </div>
        </div>
      </div>
      <div
        className="c14"
      >
        <div
          className="c15"
          fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
          fontSize={
            Array [
              "18px",
              "22px",
              "22px",
              "22px",
            ]
          }
        >
          The elegant spiral of the Nautilus shell, the sinuous pattern of the banks of a river, or the swirling vortex street of clouds - patterns exist.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Video Cover matches the snapshot with edit props 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  padding-bottom: 40px;
  padding-left: 20px;
  padding-right: 20px;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  margin-right: 20px;
}

.c12 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
}

.c13 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 42px;
  line-height: 50px;
}

.c15 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 18px;
  line-height: 26px;
  padding-top: 30px;
}

.c5 {
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 12px;
}

.c7 {
  padding-right: 20px;
  width: 60px;
}

.c14 {
  max-width: 100%;
}

.c9 {
  width: 32px;
  height: 32px;
}

.c10 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  background: url(https://artsy-vanity-files-production.s3.amazonaws.com/images/galerie-ceysson-benetiere_abmb.jpg) no-repeat center center;
  background-size: cover;
  background-color: black;
  position: absolute;
  width: 100%;
  height: 100%;
}

.c2 {
  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.6));
  position: absolute;
  width: 100%;
  height: 100%;
}

.c3 {
  box-sizing: border-box;
  z-index: 1;
  position: absolute;
  width: 100%;
  height: 100%;
}

.c3 .c8 {
  height: 60px;
  width: 44px;
  cursor: pointer;
}

.c0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  color: white;
  opacity: 1;
  visibility: visible;
  -webkit-transition: opacity 0.25s ease,visibility 0.25s ease;
  transition: opacity 0.25s ease,visibility 0.25s ease;
}

@media screen and (min-width:40em) {
  .c4 {
    padding-bottom: 60px;
  }
}

@media screen and (min-width:40em) {
  .c15 {
    font-size: 22px;
  }
}

@media screen and (min-width:52em) {
  .c15 {
    font-size: 22px;
  }
}

@media screen and (min-width:64em) {
  .c15 {
    font-size: 22px;
  }
}

@media screen and (min-width:40em) {
  .c15 {
    line-height: 32px;
  }
}

@media screen and (min-width:52em) {
  .c15 {
    line-height: 32px;
  }
}

@media screen and (min-width:64em) {
  .c15 {
    line-height: 32px;
  }
}

@media screen and (min-width:40em) {
  .c14 {
    max-width: 60%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    src="https://artsy-vanity-files-production.s3.amazonaws.com/images/galerie-ceysson-benetiere_abmb.jpg"
  />
  <div
    className="c2"
  />
  <div
    className="c3 c4"
    width="100%"
  >
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        <div
          className="c7"
          onClick={[Function]}
          width="60px"
        >
          <svg
            className="c8 c9"
            version="1.1"
            viewBox="0 0 40 56"
            x="0px"
            xmlns="http://www.w3.org/2000/svg"
            y="0px"
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <polygon
                fill="white"
                points="0 0 0 56 39.3600006 28"
              />
            </g>
          </svg>
        </div>
        <div
          className=""
        >
          <div>
            <div
              className="c6"
            >
              <div
                className="c10 c11"
                fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                fontSize="14px"
              >
                Future of Art
              </div>
              <div
                className="c12"
                fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                fontSize="14px"
              >
                02:28
              </div>
            </div>
            <div
              className="c13"
              fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
              fontSize="42px"
            >
              <div>
                Child 
                title
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c14"
      >
        <div
          className="c15"
          fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
          fontSize={
            Array [
              "18px",
              "22px",
              "22px",
              "22px",
            ]
          }
        >
          <div>
            Child 
            description
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
